<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/teste1Button"
        app:layout_constraintTop_toBottomOf="@+id/teste1Button"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="333dp"
            android:layout_height="117dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="38dp"
            android:text="@string/daltonismo"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/o_que"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/faca_teste"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/teste1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="47dp"
            android:text="@string/teste_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/teste2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/teste_2"
            app:layout_constraintStart_toStartOf="@+id/teste1Button"
            app:layout_constraintTop_toBottomOf="@+id/teste1Button" />

        <Button
            android:id="@+id/verificaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="96dp"
            android:text="@string/verificar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/teste3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/teste_3"
            app:layout_constraintEnd_toStartOf="@+id/resposta3TextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/teste2Button"
            app:layout_constraintTop_toBottomOf="@+id/teste2Button" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/suas_respostas"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/resposta1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/resposta_1"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/resposta3TextView"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/resposta2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="36dp"
            android:text="@string/resposta_2"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/resposta3TextView"
            app:layout_constraintEnd_toEndOf="@+id/resposta3TextView"
            app:layout_constraintStart_toStartOf="@+id/resposta1TextView"
            app:layout_constraintTop_toBottomOf="@+id/resposta1TextView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/resposta3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="250dp"
            android:text="@string/resposta_3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/resposta1TextView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/resultadoTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/resultadoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="108dp"
            android:text="@string/resultado_do_teste"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toEndOf="@+id/verificaButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
